# triton_for_flash_attn

./: .gitignore  COURSE_MAP.md  Makefile  README.md  course_manifest.json  pyproject.toml  triton_flash_attn.py
benchmarks/: bench_attention.py  bench_layernorm.py  bench_matmul.py  bench_memory_bandwidth.py  bench_num_warps.py  bench_softmax.py  bench_strided_access.py  bench_vector_add.py  profile_attention.py  profile_memory_allocator.py
docs/: README.md  glossary.md
exercises/: 00_setup_and_sanity.md  01_gpu_execution_model.md  02_warps_sms_occupancy.md  03_memory_hierarchy_and_device_query.md  04_tensor_addresses_strides_layouts.md  05_hbm_bandwidth_and_copy.md  06_coalescing_strides_cache.md  07_vector_add_first_kernel.md  08_elementwise_fusion.md  09_cache_hints_and_eviction.md  10_block_pointers_boundary_check.md  11_reductions_and_softmax.md  12_numerics_and_correctness.md  13_tiled_matmul.md  14_tensor_cores_and_tl_dot.md  15_layernorm_and_rowwise_norm.md  16_bottleneck_lab_and_profiler.md  17_torch_compile_and_custom_triton.md  18_ir_ptx_sass_inspection.md  19_streams_transfers_overlap.md  20_allocator_zero_fill_lifetime.md  21_attention_pytorch_baselines.md  22_flash_attention_io_accounting.md  23_flash_attention_forward_triton.md  24_flash_attention_autotune_portability.md  25_flash_attention_validation_matrix.md  26_flash_attention_backward_plan.md  27_ncu_rocprof_workflow.md  28_production_kernel_checklist.md  README.md
lessons/: 00_setup_and_sanity.py  01_gpu_execution_model.py  02_warps_sms_occupancy.py  03_memory_hierarchy_and_device_query.py  (+26 more)
(+90 files in other folders)
