[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-flash-attention-course"
version = "0.3.0"
description = "GPU低レイヤーからPyTorch bottleneck特定、Triton製FlashAttention kernel実装まで学ぶ教材"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Course Maintainer"}]
dependencies = [
  "torch>=2.3",
  "triton>=3.0",
  "numpy>=1.24",
  "pytest>=8.0",
  "rich>=13.0",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "ipykernel>=6.0"]
profile = ["tensorboard>=2.15"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "gpu: requires CUDA/ROCm-capable GPU and Triton runtime",
  "slow: longer benchmark-like test",
]

[tool.ruff]
line-length = 100
target-version = "0.3.0"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
